--- a/css/index.css
+++ b/css/index.css
@@ -239,31 +239,12 @@ padding-bottom: 50px;
    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
-/* .c section{
-  position: relative;
-  font-size: 14px;
-  right:12px;
-  width: 960px;
-  height: 710px;
-  overflow: scroll;
-  font-family:Georgia, 'Times New Roman', Times, serif;
-  top: 3px;
-} */
-
 .c label{
   position: relative;
   padding: px;
   font-size: 14px;
   font-family:Georgia, 'Times New Roman', Times, serif;
 }
-
-/* .c span{
-  position: relative;
-  left: 180px;
-  bottom: 27px; 
-  font-size: 14px;
-  font-family:Georgia, 'Times New Roman', Times, serif;
-} */
 
 .d section{
   position: relative;
@@ -345,35 +326,33 @@ input {
   list-style: none;
 }
 
-#btnViewChart {
-  background-color: grey; 
-  width: 95px;
-  height :35px;
-  border-radius: 30px;
-  position: relative;
+#viewChartBtn {
+  background-color: lightgrey; 
+  width: 85px;
+  height :30px;
+  position: left;
   left: 543px;
 }
 
-div #btnViewChart {
+div #viewChartBtn {
   display: none;
   font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
-#BtnCompanyNameSpeak{
-   background-color: grey; 
-  width: 95px;
-  height :35px;
+#compNameSpeakBtn{
+   background-color: lightgrey; 
+  width: 85px;
+  height :30px;
   font-size:17px;
   position: relative;
   left: 24px;
   font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
-#BtnCompanydescSpeak{
-  background-color: grey; 
-  width: 95px;
-  height :35px;
-  border-radius: 30px;
+#compDescSpeakBtn{
+  background-color: lightgrey; 
+  width: 85px;
+  height :30px;
   font-size:17px;
   text-align: center;
   position: relative;
@@ -445,7 +424,6 @@ div #btnViewChart {
 }
 
 #calculateinfo label{
-  
   display: flex;
   padding-bottom: 19px;
   font-size:15px;
@@ -454,11 +432,9 @@ div #btnViewChart {
   bottom: 3px;
   font-size:15px;
   font-family:Georgia, 'Times New Roman', Times, serif;
-  
 }
 
 #calculateinfo span{
-  
   display: flex;
   position: relative;
   left: 160px;  
@@ -478,21 +454,13 @@ div #btnViewChart {
   background-color:transparent;
 }
 
-#BtnDefalut{
+#defaultBtn{
   font-family:Georgia, 'Times New Roman', Times, serif;
   text-align: center;
   float: right;
   font-size:15px;
   position: relative;
   bottom:43px;
-  /* references from https://tympanus.net/codrops/2012/09/13/button-switches-with-checkboxes-and-css3-fanciness/  */
-  border-radius: 50%;
-  background: #eaeaea;
-  box-shadow: 
-      0 3px 5px rgba(0,0,0,0.25),
-      inset 0 1px 0 rgba(255,255,255,0.3),
-      inset 0 -5px 5px rgba(100,100,100,0.1),
-      inset 0 5px 5px rgba(255,255,255,0.3);
 }
 
 a:link {
