--- a/css/index.css
+++ b/css/index.css
@@ -11,12 +11,12 @@ body {
 .Header{
   margin: auto;
   margin-bottom: 1%;
-  background-color: ;
-  outline-style: auto;
-  border-radius: 0px;
+  border-radius: 10px;
   padding: 5px;
   font-size: 150%;
   text-align-last: center;
+  /*--reference taken from https://www.w3schools.com/cssref/css3_pr_box-shadow.asp */
+  box-shadow: 0 1px 4px rgba(189, 12, 12, 0.4), 0 0 40px rgba(195, 17, 17, 0.2) inset;
   /*text color */   
   color: black;
   font-family:Georgia, 'Times New Roman', Times, serif;
@@ -60,15 +60,12 @@ height: 570px;
 }
 
 .box {
-background-color: ;
 color: black;
-border-radius: 5px;
 padding: 20px;
 font-size: 150%;
 display: block;
-  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.2) inset;
- -moz-box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.2) inset;
- box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4), 0 0 40px rgba(0, 0, 0, 0.2) inset;
+/*--reference taken from https://www.w3schools.com/cssref/css3_pr_box-shadow.asp */
+ box-shadow: 0 1px 4px rgba(153, 22, 22, 0.4), 0 0 40px rgba(131, 3, 3, 0.2) inset;
 }
 
 .a {
