--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,7 @@ body {
   border-radius: 10px;
   padding: 5px;
   font-size: 150%;
+  border: 5px solid salmon;
   text-align-last: center;
   /*--reference taken from https://www.w3schools.com/cssref/css3_pr_box-shadow.asp */
   box-shadow: 0 1px 4px rgba(189, 12, 12, 0.4), 0 0 40px rgba(195, 17, 17, 0.2) inset;
